add swagger comments to delete request
