# docs/swagger.json
@@ -99,6 +99,27 @@
                         "description": "Internal Server Error"
                     }
                 }
+            },
+            "delete": {
+                "description": "Deletes exactly one todo by ID",
+                "summary": "Delete a todo by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the todo",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
             }
         },
         "/todos": {
