# internal/handler/deleteHandler.go
@@ -2,11 +2,18 @@ package handler
 
 import (
 	"ToDoInventory/internal/storage/datatypes"
+	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary	Delete a todo by ID
+// @Description Deletes exactly one todo by ID
+// @Param id path string true "ID of the todo"
+// @Success 200
+// @Failure 500
+// @Router /todo/{id} [delete]
 func (h *Handler) DeleteToDoById(c *gin.Context) {
 	id := c.Param("id")
 
@@ -17,5 +24,5 @@ func (h *Handler) DeleteToDoById(c *gin.Context) {
 		return
 	}
 
-	c.IndentedJSON(http.StatusOK, "deleted item id")
+	c.IndentedJSON(http.StatusOK, fmt.Sprintf("Deleted item id: %s", id))
 }
